--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "nuxtjs",
+  "name": "udemy-shop-admin",
   "version": "1.0.0",
-  "description": "My astonishing Nuxt App",
-  "author": "msweeneydev",
+  "description": "",
   "private": true,
   "scripts": {
     "dev": "nuxt",
